NEWS - OpenPrinting CUPS Filters v1.10.0 - 2016-07-15
-----------------------------------------------------

CHANGES IN V1.11.0

	- gstoraster: Fix setting of width and height of the page in
	  pixels when there is no Resolution option in the PPD.
	- cups-browsed, implicitclass: Avoid the use of files for the
	  communication between cups-browsed and the load-balancing
	  backend implicitclass. Instead of in a file, cups-brwsed
	  stores the destination server name in an option (which CUPS
	  saves in printers.conf) which the implicitclass backend
	  reads via IPP. This not only makes it easier to run
	  cups-filters in a sandbox, but it is also better in terms of
	  system security.
	- cups-browsed: Allow configuring where the files produced by
	  cups-browsed will get stored. This makes it easier to run
	  cups-filters in a sandbox.
        - beh: Fixed printing multiple copies with beh (Ubuntu bug
          #1605514).
	- cups-browsed: Fixed several memory leaks, especially when
	  using IPP requests and DNS-SD TXT record look-ups. Thanks to
	  Ivo Straka for finding them with Valgrind and supplying
	  patches to fix them (Bug #1365, Bug #1368, Ubuntu bug
	  #1203276).
	- libcupsfilters: Added missing "#include <cups/ppd.h>" to
	  make sure that the package builds on all systems (Bug
	  #1366).

CHANGES IN V1.10.0

	- texttotext: Added new filter for text-only printers written
	  in C, to use the CUPS library to access the print queue's
	  PPD file, with a lot of options to fit practically all
	  printer models amd paper sizes, support for CUPS' page
	  management options, and support for configuring the print
	  queue and controlling the options by the PPD file. The PPD
	  is now generated on-the-fly by cupsfilters.drv.
	- textonly: Removed the old script-based filter and its PPD
	  for text-only printers.
	- rastertops: Added new filter to turn PWG Raster into
	  PostScript, in preparation for MuPDF support. Thanks to