@@ -1,0 +1,19 @@
+#
+#   MIME conversions file for OpenPrinting CUPS Filters.
+#
+#   Copyright 2007-2011 by Apple Inc.
+#   Copyright 1997-2007 by Easy Software Products.
+#   Copyright 2012-2016 by Till Kamppeter.
+#
+#   These coded instructions, statements, and computer programs are the
+#   property of Apple Inc. and are protected by Federal copyright
+#   law.  Distribution and use rights are outlined in the file "COPYING"
+#   which should have been included with this file.
+#
+
+#
+# MuPDF-based filters...
+#
+
+application/vnd.cups-pdf	application/vnd.cups-raster	98	mupdftoraster
+application/vnd.cups-pdf	image/pwg-raster		98	mupdftoraster
